# jsontable

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
src/: table.py
src/jsontable/: __init__.py  table.py
tests/: fixtures.py  test_families.py  test_film_examples.py  test_products.py  test_renders.py
